@@ -1,5 +1,7 @@
 Changes file for DateTime::Incomplete
 
+- today / now / from_epoch / from_object / from_day_of_year
+
 0.00_06  2003-07-25
 - DateTime methods:
  week week_year week_number week_of_month day_name day_abbr day_of_week wday dow day_of_year doy quarter day_of_quarter doq weekday_of_month jd mjd is_leap_year ce_year era year_with_era last_day_of_month month_name month_abbr hour_1 hour_12 hour_12_0 fractional_second millisecond microsecond offset time_zone_short_name
